@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:48 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 19:40:17 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/gtable/
-COMMENT=	Arrage 'grobs' in tables
+COMMENT=	Arrange 'Grobs' in tables
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	gtable
-R_PKGVER=	0.2.0
+R_PKGVER=	0.3.0
 
 USE_LANGUAGES=	# none
 
-BUILDLINK_API_DEPENDS.R+=	R>=2.14
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
